# gwep_chem_finder

./: README.md
cli/: Cargo.toml
cli/src/: cli.rs  print.rs
core/: Cargo.toml
core/src/: main.rs
data/: Cargo.toml
data/src/: chemicals.rs  initialize.rs  initialize_maps.rs  lib.rs  local.rs  search_engine.rs  sql.rs
