[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data = {path = "../data"}
cli = {path = "../cli"}
pest = "2.3.0"
pest_derive = "2.3.0"
clap = {version = "4.0.17", features = ["derive"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }